--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
 *{
     margin: 0px;
     padding: 0px;
+}
+.navbar-nav{
+    display: flex !important;
+    justify-content: center !important;
+    width: 100%;
+}
+.btnLogin{
+    color: white;
+    text-decoration: none;
+    display: flex;
+    font-size: 15px;
 }
