--- a/css/style.css
+++ b/css/style.css
@@ -1,95 +1,118 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
-body{
-    width: 100% !important;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+body {
+  width: 100% !important;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
-main{
-    flex-grow: 1;
-    min-height: 100vh;
+main {
+  flex-grow: 1;
 }
-#containerCards{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    width: 100%;
+#containerCards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
 }
-.cardHome{
-    max-width: 500px;
-    min-height: 200px;
-    border: solid 1px ;
+.cardHome {
+  max-width: 500px;
+  min-height: 200px;
+  border: solid 1px;
 }
-.cardImgHome{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
+.cardImgHome {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
 }
-.cardImgHome img{
-    height: 100%;
-     object-fit: contain;
+.cardImgHome img {
+  height: 100%;
+  object-fit: contain;
 }
-.containerTexto{
-    display: flex;
-    flex-direction: column;
+.containerTexto {
+  display: flex;
+  flex-direction: column;
 }
-.textoPrecio{
-    text-decoration: line-through;
-    font-size: 15px !important;
+.textoPrecio {
+  text-decoration: line-through;
+  font-size: 15px !important;
 }
-.textoPrecioNuevo{
-    color:red;
-    font-size: 20px;
+.textoPrecioNuevo {
+  color: red;
+  font-size: 20px;
 }
-.cardFooter{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.cardFooter {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.cardFooter  button{
-    margin: 10px;
-    padding:5px 30px;
-    border-radius: 20px ;
-    border: none;
-    background-color: green;
-    color: white;
+.cardFooter button {
+  margin: 10px;
+  padding: 5px 30px;
+  border-radius: 20px;
+  border: none;
+  background-color: green;
+  color: white;
 }
-.card-body{
-    height: 50vh;
+.card-body {
+  height: 50vh;
 }
-.navbar-nav{
-    display: flex !important;
-    justify-content: center !important;
-    width: 100%;
+.navbar-nav {
+  display: flex !important;
+  justify-content: center !important;
+  width: 100%;
 }
-.btnLogin{
-    color: white;
-    text-decoration: none;
-    display: flex;
-    font-size: 15px;
+.btnLogin {
+  color: white;
+  text-decoration: none;
+  display: flex;
+  font-size: 15px;
 }
-.containerHome{
-    margin-top: 55px;
+.containerHome {
+  margin-top: 55px;
 }
 #copyrightFooter {
-    text-align: center;
-    color: #e0e0e0;
-  }
-  #cuerpoFooter .h5 {
-    color: #5d534e;
-   text-decoration:underline #5c636a
-  }
-  #cuerpoFooter li a,li{
-    text-decoration: none ;
-    color: #e0e0e0;
-  }
-  #cuerpoFooter ul {
-    list-style: none;
+  text-align: center;
+  color: #e0e0e0;
+}
+#cuerpoFooter .h5 {
+  color: #5d534e;
+  text-decoration: underline #5c636a;
+}
+#cuerpoFooter li a,
+li {
+  text-decoration: none;
+  color: #e0e0e0;
+}
+#cuerpoFooter ul {
+  list-style: none;
   padding-left: 0;
-  }
+}
+.containerDetalle{
+    margin-top: 10px;
+}
+.containerImg{
+display: flex;
+justify-content: center;
+}
+.containerBtns{
+    display: flex;
+    justify-content: center;
+}
+.containerBtns button{
+    padding: 5px 30px;
+    border-radius: 20px;
+    border: none;
+    color: white;
+}
+.btnComprar {
+    background-color: green;
+}
+.btnAgregarCarrito{
+    background-color: orangered;
+}
