--- a/css/cards/card1.css
+++ b/css/cards/card1.css
@@ -1,3 +1,5 @@
+/* Card 1 */
+
 .cardOne {
   width: 220px;
   border-width: 2px;
@@ -18,3 +20,5 @@
   cursor: cell;
   transform: scale(0.98);
 }
+
+/* ------------------------------------ */
