agrego efecto transition a la clase cardOne de card1.css

--- a/css/cards/card1.css
+++ b/css/cards/card1.css
@@ -18,7 +18,8 @@
 
 .cardOne :hover {
   cursor: cell;
-  transform: scale(0.98);
+  transform: scale(0.95);
+  transition: all 0.5s;
 }
 
 /* ------------------------------------ */
